--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,4 +1,5 @@
 <div class="container">
+<div><button id="calculateRoutes">calculate routes</button></div>       
 <div id="sortPanel">
 </div>
 <div class="map_favorites">
