--- a/views/planner/plannerStyle.css
+++ b/views/planner/plannerStyle.css
@@ -133,4 +133,7 @@
        display:block;
        margin-top:100px;
      }
-     
+     #Routes{
+         height:50px;
+         width:130px;
+     }
