--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -4,6 +4,7 @@
 </div>
 <div class="map_favorites">
 <div class ="container" id="map"></div>
+<div id="directionsText"></div>
 <div id="searchResults"></div>
 </div>
 </div>
