--- a/views/planner/planner.ejs
+++ b/views/planner/planner.ejs
@@ -25,7 +25,6 @@ function initMap() {
         data: "",
         dataType:"json",
         success: function(matchFavorites){ 
-            console.log(matchFavorites)
             for(var i = 0; i<matchFavorites.length;i++){
               $("#searchResults").append(function(){
                     return  "<div class= 'resultboxes' id='"+i+"'><div>"+matchFavorites[i].name+"</div>"+
@@ -47,9 +46,12 @@ function initMap() {
             dataType:"json",
             success:function(schedule){
                 $("#sortPanel").append(function(){
-                  var scheduleLength =  $(".ToDoItems").length;
-                  return toDoContents(schedule,scheduleLength);
+                  var lastPosIndex =  $(".ToDoItems").length;
+                  var newSchedule = schedule[schedule.length- 1];
+                  return toDoContents(newSchedule,lastPosIndex);
                 });
+                console.log(schedule);
+                sortQueryNumber(schedule)
             },
        })
     });
@@ -63,129 +65,16 @@ function initMap() {
         data:"",
         dataType:"json",
         success:function(schedule){
-           
             for( var i=0; i<schedule.length ; i++){
                 $("#sortPanel").append(function(){
                   return toDoContents(schedule[i],i);
                 });
             }
-            
-
-          var lat = parseFloat(schedule[0].location.coordinate.latitude);
-          var long = parseFloat(schedule[0].location.coordinate.longitude);
-          map.setCenter({lat: lat, lng: long});
          calculateRoutes(schedule);    
          calculateDistance(schedule);
-            
         }  
     });
 
-
-function calculateDistance(schedule){
-   
-    var origin=[];//store all the LatLng of locations in odd index
-    var destination=[];//store all the LatLng of locations in even index
-    var service = new google.maps.DistanceMatrixService();//google maps distance API
- 
- 
-    for(var i = 0 ; i<schedule.length ; i++ ){
-       var lat = schedule[i].location.coordinate.latitude;
-       var long = schedule[i].location.coordinate.longitude;
- 
-           origin.push(""+lat+","+long+"");
-           destination.push(""+lat+","+long+"");
-    }  
-    
-    
-    console.log(origin);
-    console.log(destination);
-    
-    //Request distance through Google's API
-    service.getDistanceMatrix(
-      {
-        origins: origin,
-        destinations: destination,
-        travelMode: 'DRIVING',
-        unitSystem: google.maps.UnitSystem.IMPERIAL,
-      }, function(response,status){
-          console.log(response);
-    //process recieved Data
-        if(status=="OK"){
-            var distancesArr = [];
-            for(var i = 0 ; i<schedule.length - 1; i++){
-            
-              var distanceTravel = response.rows[i].elements[i+ 1].distance.text;
-              var durationTravel = response.rows[i].elements[i+ 1].duration.text;
-              distanceObj = { "distance": distanceTravel,
-                              "duration": durationTravel
-                            };
-              distancesArr.push(distanceObj);
-            }
-        }else{
-            console.log("err")
-        }
-      });
-
-    
-}
-
-
-    
-    
-    function calculateRoutes(schedule){   
-     
-    
-        
-        var directionsService = new google.maps.DirectionsService;
-        
-        var directionsDisplay = new google.maps.DirectionsRenderer;
-        
-       
-        var waypts = [] ;
-        var originpts;
-        var endpts;
-               
-        for( var i = 0 ; i< schedule.length ; i++){
-        
-            var lats    = schedule[i].location.coordinate.latitude;
-                
-            var longs   = schedule[i].location.coordinate.longitude;
-               
-            if( i == 0){
-                originpts = ""+lats+","+longs+"" ;
-           }else if( i == schedule.length - 1){
-               endpts= ""+lats+","+longs+"";
-               displayRoutes(directionsService,directionsDisplay,originpts,waypts,endpts);
-            }else{  
-                 waypts.push({location:""+lats+","+longs+"" , stopover: true}); 
-            }
-        };
-    };     
-    
-    
-    function displayRoutes(directionsService,directionsDisplay,originpts,waypts,endpts){  
-
-        directionsService.route({
-              origin: originpts,
-              waypoints:waypts,
-              destination: endpts,
-              travelMode: 'DRIVING'
-            }, function(response, status) {
-              if (status === 'OK') {
-                directionsDisplay.setDirections(response);
-                 directionsDisplay.setMap(map);
-                 //remove current direction from directionsText element
-                 //and replace with new directions
-                 document.getElementById("directionsText").innerHTML="";
-                 console.log(directionsDisplay);
-                 directionsDisplay.setPanel(document.getElementById("directionsText"));
-              } else {
-                console.log('Directions request failed due to ' + status);
-              }
-            }      
-        );
-    };
-    
 
        //allows ToDo  to be sortable on click
    $("#sortPanel").sortable({
@@ -196,6 +85,7 @@ function calculateDistance(schedule){
               url:"/planner/schedule/edit",
               data:{id:reorderedSchedule},
               success:function(sortedSchedule){
+                  console.log(sortedSchedule);
                   sortQueryNumber(sortedSchedule);    
               }
           })
@@ -207,18 +97,17 @@ function calculateDistance(schedule){
     $("#sortPanel").on("click",".removeToDo",function(){
         var deleteToDo = $(this).siblings("#heading").children(".queryNumber").html();
         $this = $(this);
-        console.log(deleteToDo)
           $.ajax({
               type: "DELETE",
               url:"/planner/toDo/delete",
               data:{'id':deleteToDo},
               success:function(deletedYelpData){
                    $this.parent().parent().parent().remove();
+                   console.log(deletedYelpData);
                    sortQueryNumber(deletedYelpData);
               }
          });
         });
-
 
 
      //function for returning toDo boxes    
@@ -233,17 +122,111 @@ function calculateDistance(schedule){
                         "</span><img class='locationImage'src='"+toDoObject.image_url+"'></img></div>"
      };
      
+     
      function sortQueryNumber(yelpObject){
       $(".queryNumber").each(function(index){
           $(this).html(index)
       }); 
-      console.log(yelpObject);
       calculateRoutes(yelpObject);
-      calculateRoutes(yelpObject)
-     
-
+      calculateDistance(yelpObject);
      };
      
+     
+     
+     function calculateDistance(schedule){
+        var origin=[];//store all the LatLng of locations in odd index
+        var destination=[];//store all the LatLng of locations in even index
+        var service = new google.maps.DistanceMatrixService();//google maps distance API
+     
+        for(var i = 0 ; i<schedule.length ; i++ ){
+           var lat = schedule[i].location.coordinate.latitude;
+           var long = schedule[i].location.coordinate.longitude;
+               origin.push(""+lat+","+long+"");
+               destination.push(""+lat+","+long+"");
+        }  
+
+        //Request distance through Google's API
+        service.getDistanceMatrix(
+          {
+            origins: origin,
+            destinations: destination,
+            travelMode: 'DRIVING',
+            unitSystem: google.maps.UnitSystem.IMPERIAL,
+          }, function(response,status){
+        //process recieved Data
+            if(status=="OK"){
+                var distancesArr = [];
+                for(var i = 0 ; i<schedule.length - 1; i++){
+                  var distanceTravel = response.rows[i].elements[i+ 1].distance.text;
+                  var durationTravel = response.rows[i].elements[i+ 1].duration.text;
+                  distanceObj = { "distance": distanceTravel,
+                                  "duration": durationTravel
+                                };
+                  distancesArr.push(distanceObj);
+                }
+            }else{
+                console.log(err)
+            }
+          });
+    }
+    
+    
+    function calculateRoutes(schedule){   
+        console.log(schedule);
+        var directionsService = new google.maps.DirectionsService;
+        var directionsDisplay = new google.maps.DirectionsRenderer;
+        var waypts = [] ;
+        var originpts;
+        var endpts;
+        
+        for( var i = 0 ; i< schedule.length ; i++){
+            var lats    = schedule[i].location.coordinate.latitude;
+            var longs   = schedule[i].location.coordinate.longitude;
+            if( i == 0){
+                originpts = ""+lats+","+longs+"" ;
+           }else if( i == schedule.length - 1){
+               endpts= ""+lats+","+longs+"";
+               displayRoutes(directionsService,directionsDisplay,originpts,waypts,endpts);
+            }else{  
+                 waypts.push({location:""+lats+","+longs+"" , stopover: true}); 
+            }
+        };
+        
+    };     
+    
+    
+    function displayRoutes(directionsService,directionsDisplay,originpts,waypts,endpts){  
+        
+        directionsService.route({
+             
+              origin: originpts,
+              waypoints:waypts,
+              destination: endpts,
+              travelMode: 'DRIVING'
+              
+            }, function(response, status) {
+              
+              if (status === 'OK') {
+               map ="";
+               map =new google.maps.Map(document.getElementById('map'),{
+                      center: {lat: -34.397, lng: 150.644},                      
+                      zoom: 10
+                        });
+                 directionsDisplay.setDirections(response);
+                 directionsDisplay.setMap(map);
+                 //remove current direction from directionsText element
+                 //and replace with new directions
+                 document.getElementById("directionsText").innerHTML="";
+                 directionsDisplay.setPanel(document.getElementById("directionsText"));
+             
+              } else {
+                console.log('Directions request failed due to ' + status);
+              }
+            }      
+        );
+    };
+    
+    
      function addMarkerToMap(yelpObject,i){
         if(i == 0){
           //remove markers on map
@@ -255,7 +238,6 @@ function calculateDistance(schedule){
         var latPos  = parseFloat(yelpObject.location.coordinate.latitude);
         var longPos = parseFloat(yelpObject.location.coordinate.longitude);
         var i       = i.toString();
-        
          marker = new google.maps.Marker({
             position: {lat:latPos, lng:longPos},
             title:yelpObject.name,
@@ -267,6 +249,7 @@ function calculateDistance(schedule){
      }
 
 }
+
 </script>
 
 
